plugins {
  id 'java-gradle-plugin'
  id 'com.gradle.plugin-publish' version '1.3.0'
  id 'io.freefair.lombok' version '8.10'
}

repositories {
  mavenCentral()
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(20)
  }
}

group = 'fr.pierrickrouxel'
version = '1.3.2'

gradlePlugin {

  website = 'https://github.com/pierrickrouxel/jpa-entity-generator'
  vcsUrl = 'https://github.com/pierrickrouxel/jpa-entity-generator.git'

  plugins {
    jpaEntityGeneratorPlugin {
      id = 'fr.pierrickrouxel.jpa-entity-generator'
      displayName = 'Plugin for generate JPA entities from and existant database'
      description = 'A plugin that helps you reverse you databases'
      tags.addAll('java', 'jpa', 'entity', 'generator')
      implementationClass = 'fr.pierrickrouxel.jpaentitygenerator.gradle.JpaEntityGeneratorPlugin'
    }
  }
}

dependencies {
  implementation 'org.apache.commons:commons-text:1.12.0'
  implementation 'org.atteo:evo-inflector:1.3'
  implementation 'com.squareup:javapoet:1.13.0'
  implementation 'org.yaml:snakeyaml:2.3'

  testImplementation 'com.h2database:h2:2.3.232'
  testImplementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'

  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.1'
  testImplementation 'org.assertj:assertj-core:3.26.3'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.1'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.1'
}

tasks.named('test') {
  useJUnitPlatform()
}

tasks.named('javadoc') {
  enabled = false
}
